[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project]
name = "comet"
description = "A COnfig and METadata tracker"
license-files = ["LICENSE"]
authors = [
    { name = "The CHIME Collaboration", email = "lgray@phas.ubc.ca" },
    { name = "Rick Nitsche", email = "rick@phas.ubc.ca" },
]
maintainers = [
    { name = "Liam Gray", email = "lgray@phas.ubc.ca" },
    { name = "Don Wiebe", email = "dvw@phas.ubc.ca" }
]
dynamic = ["readme", "version"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chimedb @ git+https://github.com/chime-experiment/chimedb.git",
    "chimedb.dataset @ git+https://github.com/chime-experiment/chimedb_dataset.git",
    "async-lru",
    "click",
    "mmh3",
    "orjson",
    "peewee",
    "redis>=4.2",
    "requests",
    "sanic>=22.9",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "codecov", "pytest-cov", "locust", "aiohttp", "flask"]

[project.urls]
Repository = "https://github.com/chime-experiment/comet"

[project.scripts]
comet = "comet.cli:cli"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages]
find = {}
